[metadata]
name = Oilele
author = Nicola Canepa
author_email = canne74@gmail.com
description = Comic book visualizer
long_description = file:README.rst
url = https://github.com/canne74/Oilele
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
    attr
    pdf2image
    pygame

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
where = src

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo

	# local
rar =
    unrar
rpi =
    inky
    # On RaspberryPi, it only works using the package provided one - 20221101
    numpy
    RPi.GPIO

[options.entry_points]
console_scripts =
	oilala = oilele.oilala:main
	faccela_vedé = oilele.oilala:main
	faccela_toccá = oilele.oilala:main
