[metadata]
name = Oilele
author = Nicola Canepa
author_email = canne74@gmail.com
description = Comic book visualizer
long_description = file:README.rst
url = https://github.com/canepan/Oilele
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
    attrs >= 17.4.0
    pdf2image
    pygame

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
where = src

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local
rar =
    unrar
inky =
    inky
    # On RaspberryPi, it only works using the OS provided one - 20221101
    numpy
    RPi.GPIO

[options.entry_points]
console_scripts =
	oilala = oilele.oilala:main
	faccela_vedé = oilele.oilala:main
	faccela_toccá = oilele.oilala:main
